Переделал кнопку лайков в карточке пользователя

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -646,8 +646,9 @@
                 </picture>
               </a>
               <div class="user-card__likes user-card__likes--catalog">
-                <div
-                  class="user-card__like-container user-card__like-container--catalog user-card__like-container--liked">
+                <button
+                  class="user-card__like-container user-card__like-container--catalog user-card__like-container--liked button-reset">
+                  <span class="visually-hidden">Нравится</span>
                   <svg class="user-card__heart-icon user-card__heart-icon--catalog" viewBox="0 0 13 13" width="13"
                     height="13" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip02)">
@@ -662,10 +663,11 @@
                       </clipPath>
                     </defs>
                   </svg>
-                </div>
+                </button>
                 <span class="user-card__likes-quantity user-card__likes-quantity--catalog">1,5 М</span>
               </div>
-              <a class="user-card__user-name user-card__user-name--offline user-card__user-name--catalog link-reset" href="#">Таня Фирсова
+              <a class="user-card__user-name user-card__user-name--offline user-card__user-name--catalog link-reset"
+                href="#">Таня Фирсова
                 <span class="user-card__user-status user-card__user-status--offline">
                   <span class="visually-hidden">Оффлайн</span>
                 </span>
@@ -790,14 +792,15 @@
           <li class="filtered__item filtered__item--catalog">
             <div class="user-card user-card--catalog">
               <a class="user-card__image" href="#">
-              <picture>
-                <source srcset="img/users/demin-desktop.png" media="(min-width: 1440px)">
-                <source srcset="img/users/demin-tablet.png" media="(min-width: 768px)">
-                <img class="user-card__image" src="img/users/demin-mobile.png" alt="Петя Демин">
-              </picture>
-            </a>
+                <picture>
+                  <source srcset="img/users/demin-desktop.png" media="(min-width: 1440px)">
+                  <source srcset="img/users/demin-tablet.png" media="(min-width: 768px)">
+                  <img class="user-card__image" src="img/users/demin-mobile.png" alt="Петя Демин">
+                </picture>
+              </a>
               <div class="user-card__likes user-card__likes--catalog">
-                <div class="user-card__like-container user-card__like-container--catalog">
+                <button class="user-card__like-container user-card__like-container--catalog button-reset">
+                  <span class="visually-hidden">Нравится</span>
                   <svg class="user-card__heart-icon user-card__heart-icon--catalog" viewBox="0 0 13 13" width="13"
                     height="13" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip04)">
@@ -811,10 +814,11 @@
                       </clipPath>
                     </defs>
                   </svg>
-                </div>
+                </button>
                 <span class="user-card__likes-quantity user-card__likes-quantity--catalog">1500</span>
               </div>
-              <a class="user-card__user-name user-card__user-name--offline user-card__user-name--catalog link-reset" href="#">Петя Демин
+              <a class="user-card__user-name user-card__user-name--offline user-card__user-name--catalog link-reset"
+                href="#">Петя Демин
                 <span class="user-card__user-status user-card__user-status--offline">
                   <span class="visually-hidden">Оффлайн</span>
                 </span>
@@ -928,14 +932,15 @@
           <li class="filtered__item filtered__item--catalog">
             <div class="user-card user-card--catalog">
               <a class="user-card__image" href="#">
-              <picture>
-                <source srcset="img/users/smolov-desktop.png" media="(min-width: 1440px)">
-                <source srcset="img/users/smolov-tablet.png" media="(min-width: 768px)">
-                <img class="user-card__image" src="img/users/smolov-mobile.png" alt="Марк Смолов">
-              </picture>
-            </a>
+                <picture>
+                  <source srcset="img/users/smolov-desktop.png" media="(min-width: 1440px)">
+                  <source srcset="img/users/smolov-tablet.png" media="(min-width: 768px)">
+                  <img class="user-card__image" src="img/users/smolov-mobile.png" alt="Марк Смолов">
+                </picture>
+              </a>
               <div class="user-card__likes user-card__likes--catalog">
-                <div class="user-card__like-container user-card__like-container--catalog">
+                <button class="user-card__like-container user-card__like-container--catalog button-reset">
+                  <span class="visually-hidden">Нравится</span>
                   <svg class="user-card__heart-icon user-card__heart-icon--catalog" viewBox="0 0 13 13" width="13"
                     height="13" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip05)">
@@ -949,10 +954,11 @@
                       </clipPath>
                     </defs>
                   </svg>
-                </div>
+                </button>
                 <span class="user-card__likes-quantity user-card__likes-quantity--catalog">170</span>
               </div>
-              <a class="user-card__user-name user-card__user-name--offline user-card__user-name--catalog link-reset" href="#">Марк Смолов
+              <a class="user-card__user-name user-card__user-name--offline user-card__user-name--catalog link-reset"
+                href="#">Марк Смолов
                 <span class="user-card__user-status user-card__user-status--offline">
                   <span class="visually-hidden">Оффлайн</span>
                 </span>
@@ -1073,14 +1079,15 @@
           <li class="filtered__item filtered__item--catalog">
             <div class="user-card user-card--catalog">
               <a class="user-card__image" href="#">
-              <picture>
-                <source srcset="img/users/rogovaya-desktop.png" media="(min-width: 1440px)">
-                <source srcset="img/users/rogovaya-tablet.png" media="(min-width: 768px)">
-                <img class="user-card__image" src="img/users/rogovaya-mobile.png" alt="Лариса Роговая">
-              </picture>
-            </a>
+                <picture>
+                  <source srcset="img/users/rogovaya-desktop.png" media="(min-width: 1440px)">
+                  <source srcset="img/users/rogovaya-tablet.png" media="(min-width: 768px)">
+                  <img class="user-card__image" src="img/users/rogovaya-mobile.png" alt="Лариса Роговая">
+                </picture>
+              </a>
               <div class="user-card__likes user-card__likes--catalog">
-                <div class="user-card__like-container user-card__like-container--catalog">
+                <button class="user-card__like-container user-card__like-container--catalog button-reset">
+                  <span class="visually-hidden">Нравится</span>
                   <svg class="user-card__heart-icon user-card__heart-icon--catalog" viewBox="0 0 13 13" width="13"
                     height="13" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip07)">
@@ -1094,10 +1101,11 @@
                       </clipPath>
                     </defs>
                   </svg>
-                </div>
+                </button>
                 <span class="user-card__likes-quantity user-card__likes-quantity--catalog">23</span>
               </div>
-              <a class="user-card__user-name user-card__user-name--online user-card__user-name--catalog link-reset" href="#">Лариса Роговая
+              <a class="user-card__user-name user-card__user-name--online user-card__user-name--catalog link-reset"
+                href="#">Лариса Роговая
                 <span class="user-card__user-status user-card__user-status--online">
                   <span class="visually-hidden">Онлайн</span>
                 </span>
