--- a/source/catalog.html
+++ b/source/catalog.html
@@ -462,7 +462,9 @@
           <li class="alphabet__country">Афганистан</li>
         </ul>
       </div>
-      <button class="button button--minimize" type="button" aria-label="Свернуть">x Свернуть</button>
+      <button class="button button--minimize" type="button" aria-label="Свернуть">
+        Свернуть
+      </button>
     </div>
     <div class="wrapper">
       <section class="companion-selection">
@@ -867,7 +869,7 @@
                   class="user-card__text user-card__text--catalog user-card__text--catalog-left">транспорт:</span><span
                   class="user-card__text user-card__text--catalog user-card__text--catalog-right">левел:</span>
               </p>
-              <div class="user-card__group user-card__group--catalog ">
+              <div class="user-card__group user-card__group--catalog user-card__group--two-flags">
                 <ul class="transport-list transport-list--catalog list-reset">
                   <li class="transport-list__item transport-list__item--catalog transport-list__item--active">
                     <svg class="transport-list__icon" viewBox="0 0 18 17" width="18" height="17" fill="none"
@@ -1151,7 +1153,7 @@
                   class="user-card__text user-card__text--catalog user-card__text--catalog-left">транспорт:</span><span
                   class="user-card__text user-card__text--catalog user-card__text--catalog-right">левел:</span>
               </p>
-              <div class="user-card__group user-card__group--catalog ">
+              <div class="user-card__group user-card__group--catalog user-card__group--two-flags">
                 <ul class="transport-list transport-list--catalog list-reset">
                   <li class="transport-list__item transport-list__item--catalog transport-list__item--active">
                     <svg class="transport-list__icon" viewBox="0 0 18 17" width="18" height="17" fill="none"
