Исправил индикатор онлайна

--- a/source/index.html
+++ b/source/index.html
@@ -333,6 +333,9 @@
                   <span class="tooltip tooltip--flags">Сейшелы</span>
                 </li>
               </ul>
+              <span class="user-card__user-status user-card__user-status--index user-card__user-status--offline">
+                <span class="visually-hidden">Оффлайн</span>
+              </span>
               <p class="user-card__user-name user-card__user-name--offline">Таня Фирсова</p>
               <ul class="tag-list list-reset">
                 <li class="tag-list__item">
@@ -432,6 +435,9 @@
                   <span class="tooltip tooltip--flags">Чехия</span>
                 </li>
               </ul>
+              <span class="user-card__user-status user-card__user-status--index user-card__user-status--online">
+                <span class="visually-hidden">Онлайн</span>
+              </span>
               <p class="user-card__user-name user-card__user-name--online">Петя Демин</p>
               <ul class="tag-list list-reset">
                 <li class="tag-list__item">
