Исправил ошибку с фото пользователя

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -96,7 +96,8 @@
           </li>
           <li class="social-list__item">
             <a class="social-list__link social-list__link--menu social-list__link--instagram link-reset" href="#">
-              <svg class="social-list__icon social-list__icon--instagram" viewBox="0 0 18 18" width="18" height="18" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <svg class="social-list__icon social-list__icon--instagram" viewBox="0 0 18 18" width="18" height="18"
+                fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip5)">
                   <path
                     d="M12.96 2.033a3.274 3.274 0 012.289.936c.607.597.95 1.407.951 2.252v7.791a3.169 3.169 0 01-.951 2.252 3.275 3.275 0 01-2.289.936H5.04a3.274 3.274 0 01-2.284-.938 3.169 3.169 0 01-.949-2.25V5.221a3.169 3.169 0 01.949-2.25 3.274 3.274 0 012.284-.938h7.92zm0-1.062H5.04a4.356 4.356 0 00-3.055 1.244A4.215 4.215 0 00.72 5.221v7.791c0 1.127.455 2.208 1.265 3.005a4.356 4.356 0 003.055 1.245h7.92a4.357 4.357 0 003.055-1.245 4.216 4.216 0 001.265-3.005V5.221a4.216 4.216 0 00-1.265-3.006A4.356 4.356 0 0012.96.971z" />
@@ -645,10 +646,10 @@
           <li class="filtered__item filtered__item--catalog">
             <div class="user-card user-card--catalog">
               <a class="user-card__image" href="#">
-                <picture class="page-header__image">
-                  <source srcset="img/logos/logo-desktop.png 1x, img/logos/logo-desktop@2x.png 2x" media="(min-width: 1440px)">
-                  <source srcset="img/logos/logo-tablet.png 1x, img/logos/logo-tablet@2x.png 2x" media="(min-width: 768px)">
-                  <img src="img/logos/logo-white-mobile.png" srcset="img/logos/logo-white-mobile@2x.png 2x" alt="Погнали?">
+                <picture>
+                  <source srcset="img/users/firsova-desktop.png" media="(min-width: 1440px)">
+                  <source srcset="img/users/firsova-tablet.png" media="(min-width: 768px)">
+                  <img class="user-card__image" src="img/users/firsova-mobile.png" alt="Таня Фирсова">
                 </picture>
               </a>
               <div class="user-card__likes user-card__likes--catalog">
@@ -1286,7 +1287,8 @@
         </li>
         <li class="social-list__item social-list__item--footer">
           <a class="social-list__link social-list__link--instagram link-reset" href="#">
-            <svg class="social-list__icon social-list__icon--instagram" viewBox="0 0 18 18" width="18" height="18" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+            <svg class="social-list__icon social-list__icon--instagram" viewBox="0 0 18 18" width="18" height="18"
+              fill="currentColor" xmlns="http://www.w3.org/2000/svg">
               <g clip-path="url(#clip5)">
                 <path
                   d="M12.96 2.033a3.274 3.274 0 012.289.936c.607.597.95 1.407.951 2.252v7.791a3.169 3.169 0 01-.951 2.252 3.275 3.275 0 01-2.289.936H5.04a3.274 3.274 0 01-2.284-.938 3.169 3.169 0 01-.949-2.25V5.221a3.169 3.169 0 01.949-2.25 3.274 3.274 0 012.284-.938h7.92zm0-1.062H5.04a4.356 4.356 0 00-3.055 1.244A4.215 4.215 0 00.72 5.221v7.791c0 1.127.455 2.208 1.265 3.005a4.356 4.356 0 003.055 1.245h7.92a4.357 4.357 0 003.055-1.245 4.216 4.216 0 001.265-3.005V5.221a4.216 4.216 0 00-1.265-3.006A4.356 4.356 0 0012.96.971z" />
