--- a/source/form.html
+++ b/source/form.html
@@ -14,7 +14,8 @@
       <div class="menu__header">
         <a class="page-header__logo link-reset" href="index.html">
           <picture class="page-header__image">
-            <source srcset="img/logos/logo-desktop.png 1x, img/logos/logo-desktop@2x.png 2x" media="(min-width: 1440px)">
+            <source srcset="img/logos/logo-desktop.png 1x, img/logos/logo-desktop@2x.png 2x"
+              media="(min-width: 1440px)">
             <source srcset="img/logos/logo-tablet.png 1x, img/logos/logo-tablet@2x.png 2x" media="(min-width: 768px)">
             <img src="img/logos/logo-white-mobile.png" srcset="img/logos/logo-white-mobile@2x.png 2x" alt="Погнали?">
           </picture>
@@ -96,7 +97,8 @@
           </li>
           <li class="social-list__item">
             <a class="social-list__link social-list__link--menu social-list__link--instagram link-reset" href="#">
-              <svg class="social-list__icon social-list__icon--instagram" viewBox="0 0 18 18" width="18" height="18" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <svg class="social-list__icon social-list__icon--instagram" viewBox="0 0 18 18" width="18" height="18"
+                fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip5)">
                   <path
                     d="M12.96 2.033a3.274 3.274 0 012.289.936c.607.597.95 1.407.951 2.252v7.791a3.169 3.169 0 01-.951 2.252 3.275 3.275 0 01-2.289.936H5.04a3.274 3.274 0 01-2.284-.938 3.169 3.169 0 01-.949-2.25V5.221a3.169 3.169 0 01.949-2.25 3.274 3.274 0 012.284-.938h7.92zm0-1.062H5.04a4.356 4.356 0 00-3.055 1.244A4.215 4.215 0 00.72 5.221v7.791c0 1.127.455 2.208 1.265 3.005a4.356 4.356 0 003.055 1.245h7.92a4.357 4.357 0 003.055-1.245 4.216 4.216 0 001.265-3.005V5.221a4.216 4.216 0 00-1.265-3.006A4.356 4.356 0 0012.96.971z" />
@@ -130,9 +132,12 @@
           <span class="user-score__text user-score__text--directions">level</span>
         </div>
         <picture class="profile__image">
-          <source srcset="img/users/demin-desktop-190-190.png" media="(min-width: 1439px)">
-          <source srcset="img/users/demin-tablet-94-94.png" media="(min-width: 768px)">
-          <img src="img/users/demin-mobile-100-100.png" alt="Петя Демин">
+          <source srcset="img/users/demin-desktop-190-190.png 1x, img/users/demin-desktop-190-190@2x.png 2x"
+            media="(min-width: 1439px)">
+          <source srcset="img/users/demin-tablet-94-94.png 1x, img/users/demin-tablet-94-94@2x.png 2x"
+            media="(min-width: 768px)">
+          <img src="img/users/demin-mobile-100-100.png" srcset="img/users/demin-mobile-100-100@2x.png 2x"
+            alt="Петя Демин">
         </picture>
         <button class="button button--change-photo" type="button">
           <span class="button__text">Сменить фото</span>
@@ -531,8 +536,11 @@
               </select>
               <div class="planner__icon">
                 <picture>
-                  <source srcset="img/flags/bosnia-and-herzegovina-70-47.png" media="(min-width: 768px)">
-                  <img src="img/flags/bosnia-and-herzegovina-35-24.png" alt="Босния и герцеговина">
+                  <source
+                    srcset="img/flags/bosnia-and-herzegovina-70-47.png 1x, img/flags/bosnia-and-herzegovina-70-47@2x.png 2x"
+                    media="(min-width: 768px)">
+                  <img src="img/flags/bosnia-and-herzegovina-35-24.png"
+                    srcset="img/flags/bosnia-and-herzegovina-35-24@2x.png 2x" alt="Босния и герцеговина">
                 </picture>
                 <button class="button button--close button--close-flag" type="button" aria-label="Закрыть">
                   <svg class="planner__close-icon" viewBox="0 0 9 9" width="9" height="9" fill="currentColor"
@@ -552,8 +560,9 @@
               </select>
               <div class="planner__icon">
                 <picture>
-                  <source srcset="img/flags/flag-czech-70-47.png" media="(min-width: 767px)">
-                  <img src="img/flags/flag-czech-35-24.png" alt="Чехия">
+                  <source srcset="img/flags/flag-czech-70-47.png 1x, img/flags/flag-czech-70-47@2x.png 2x"
+                    media="(min-width: 767px)">
+                  <img src="img/flags/flag-czech-35-24.png" srcset="img/flags/flag-czech-35-24@2x.png 2x" alt="Чехия">
                 </picture>
                 <button class="button button--close button--close-flag" type="button" aria-label="Закрыть">
                   <svg class="planner__close-icon" viewBox="0 0 9 9" width="9" height="9" fill="currentColor"
@@ -738,16 +747,20 @@
           </p>
           <label class="planner__textarea-label planner__textarea-label--bosnia" for="plans-fiel-1">Босния и Герцеговина
             <picture class="planner__flag planner__flag--bosnia">
-              <source srcset="img/flags/bosnia-and-herzegovina-70-47.png" media="(min-width: 767px)">
-              <img src="img/flags/bosnia-and-herzegovina-35-24.png" alt="Босния и Герцеговина">
+              <source
+                srcset="img/flags/bosnia-and-herzegovina-70-47.png 1x, img/flags/bosnia-and-herzegovina-70-47@2x.png 2x"
+                media="(min-width: 767px)">
+              <img src="img/flags/bosnia-and-herzegovina-35-24.png"
+                srcset="img/flags/bosnia-and-herzegovina-35-24@2x.png 2x" alt="Босния и Герцеговина">
             </picture>
           </label>
           <textarea class="planner__textarea" name="plans-field" id="plans-fiel-1" cols="30" rows="9">План действий
           </textarea>
           <label class="planner__textarea-label" for="plans-field-2">Чехия
             <picture class="planner__flag planner__flag--czech">
-              <source srcset="img/flags/flag-czech-70-47.png" media="(min-width: 767px)">
-              <img src="img/flags/flag-czech-35-24.png" alt="Чехия">
+              <source srcset="img/flags/flag-czech-70-47.png 1x, img/flags/flag-czech-70-47@2x.png 2x"
+                media="(min-width: 767px)">
+              <img src="img/flags/flag-czech-35-24.png" srcset="img/flags/flag-czech-35-24@2x.png 2x" alt="Чехия">
             </picture>
           </label>
           <textarea class="planner__textarea planner__textarea--active" name="plans-field" id="plans-field-2" cols="30"
@@ -804,7 +817,8 @@
           </li>
           <li class="social-list__item social-list__item--footer">
             <a class="social-list__link social-list__link--instagram link-reset" href="#">
-              <svg class="social-list__icon social-list__icon--instagram" viewBox="0 0 18 18" width="18" height="18" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <svg class="social-list__icon social-list__icon--instagram" viewBox="0 0 18 18" width="18" height="18"
+                fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <g clip-path="url(#clip5)">
                   <path
                     d="M12.96 2.033a3.274 3.274 0 012.289.936c.607.597.95 1.407.951 2.252v7.791a3.169 3.169 0 01-.951 2.252 3.275 3.275 0 01-2.289.936H5.04a3.274 3.274 0 01-2.284-.938 3.169 3.169 0 01-.949-2.25V5.221a3.169 3.169 0 01.949-2.25 3.274 3.274 0 012.284-.938h7.92zm0-1.062H5.04a4.356 4.356 0 00-3.055 1.244A4.215 4.215 0 00.72 5.221v7.791c0 1.127.455 2.208 1.265 3.005a4.356 4.356 0 003.055 1.245h7.92a4.357 4.357 0 003.055-1.245 4.216 4.216 0 001.265-3.005V5.221a4.216 4.216 0 00-1.265-3.006A4.356 4.356 0 0012.96.971z" />
