Добавил rel="noreferrer" для ссылок на сторонние ресурсы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1341,7 +1341,7 @@
         </li>
       </ul>
     </div>
-    <a class="page-footer__developers link-reset" href="https://htmlacademy.ru/intensive/adaptive" target="_blank">
+    <a class="page-footer__developers link-reset" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noreferrer">
       <span class="page-footer__text">Разработано</span>
       <img src="img/htmlacademy.svg" alt="HTML Academy" width="27" height="34">
     </a>
